--- a/src/components/ShopList/shopList.css
+++ b/src/components/ShopList/shopList.css
@@ -2,3 +2,15 @@
 display: flex;
 margin-left: 5%;
 }
+
+.shoppingListDiv {
+  margin: 15px 5% 0 5%;
+}
+
+.clearButton{
+    margin-right: 10px;
+}
+
+.resetButton {
+    margin-right: 10px;
+}
